<resources>
    <string name="app_name">Mobile App</string>
    <string name="toolbar_name_grades_average">Grades Average</string>
    <string name="toolbar_name_phones_database_app">Phone Database</string>
    <string name="toolbar_name_drawing_app">Draw</string>
    <string name="toolbar_name_file_download_app">File</string>

    <!--activity_main-->
    <string name="app_name_grades_average">Calculate the Grades Average</string>
    <string name="app_name_phones_database">Database of Mobile Phones</string>
    <string name="app_name_drawing">Drawing</string>
    <string name="app_name_file_download">File download</string>
    <!--activity_main-->

    <!--swap general with android impl?  android:string -->
    <!--general-->
    <string name="information_item_add">Add</string>
    <string name="information_item_edit">Edit</string>
    <string name="information_item_delete">Delete</string>
    <string name="information_item_delete_all">Delete all</string>
    <string name="information_ok">OK</string>
    <string name="information_save">Save</string>
    <string name="information_cancel">Cancel</string>
    <string name="information_ready">Ready</string>
    <string name="information_no_data">No data</string>
    <string name="information_no_internet_connection">No internet connection</string>
    <string name="message_item_saved">Saved successfully</string>
    <string name="message_item_deleted">Successfully deleted</string>
    <string name="message_item_deleted_all">Successfully deleted all</string>
    <string name="label_no_data" translatable="false">-</string>
    <!--general-->

    <!--activity_grades_form-->
    <string name="label_grades_name">Name:</string>
    <string name="label_grades_surname">Surname:</string>
    <string name="label_grades_amount">Number of grades:</string>
    <string name="button_grades_proceed">Grades</string>
    <string name="button_grades_passed">Great :)</string>
    <string name="button_grades_failed">I didn\'t make it this time</string>
    <string name="error_grades_name_input_invalid">Entered name is invalid</string>
    <string name="error_grades_surname_input_invalid">Entered surname is invalid</string>
    <string name="error_grades_amount_input_empty">Number of grades cannot be empty</string>
    <string name="error_grades_amount_input_invalid_range">Number of grades must be in range of [5;15]</string>
    <string name="message_mean_result">Your mean is %.2f</string>
    <string name="message_grades_passed">Congratulations! You passed!</string>
    <string name="message_grades_failed">I\'m sending an application for a conditional pass</string>
    <!--activity_grades_form-->

    <!--activity_grades_selection-->
    <string name="error_grades_not_checked">Not all grades have been checked</string>
    <!--activity_grades_selection-->

    <!--grades_group-->
    <string name="label_grades_order">Grade %d</string>
    <string name="grade_two" translatable="false">2</string>
    <string name="grade_three" translatable="false">3</string>
    <string name="grade_four" translatable="false">4</string>
    <string name="grade_five" translatable="false">5</string>
    <!--grades_group-->

    <!--activity_phone_database_form-->
    <string name="label_phone_manufacturer">Manufacturer:</string>
    <string name="label_phone_model">Model:</string>
    <string name="label_phone_android_version">Android version:</string>
    <string name="label_phone_website" translatable="false">WWW:</string>
    <string name="button_phone_website" translatable="false">WWW</string>
    <string name="error_phone_manufacturer_input_invalid">Entered manufacturer name is invalid</string>
    <string name="error_phone_model_input_invalid">Entered model name is invalid</string>
    <string name="error_phone_android_version_invalid">Entered android version is invalid</string>
    <string name="error_phone_website_input_invalid">Entered website address is invalid</string>
    <string name="message_entered_phone_data_invalid">Not all entered data is valid</string>

    <string-array name="phone_manufacturers_list">
        <item>Asus</item>
        <item>BlackBerry</item>
        <item>Google</item>
        <item>HMD</item>
        <item>HTC</item>
        <item>Huawei</item>
        <item>Lenovo</item>
        <item>LG</item>
        <item>Meizu</item>
        <item>Motorola</item>
        <item>OnePlus</item>
        <item>Oppo</item>
        <item>Realme</item>
        <item>Samsung</item>
        <item>Sony</item>
        <item>Tecno</item>
        <item>Vivo</item>
        <item>Xiaomi</item>
        <item>ZTE</item>
    </string-array>
    <!--activity_phone_database_form-->

    <!--activity_drawing-->
    <string name="menu_item_change_paint_color">Change paint color</string>
    <string name="menu_item_clear_screen">Clear screen</string>
    <string name="menu_item_change_paint_width">Change paint width</string>
    <string name="dialog_item_set_paint_width">Set paint width</string>
    <string name="menu_item_change_background_color">Change background color</string>
    <!--activity_drawing-->

    <!--activity_file_download-->
    <string name="label_file_download_address">Address:</string>
    <string name="label_file_download_size">File size:</string>
    <string name="label_file_download_type">File type:</string>
    <string name="label_file_download_progress">Downloaded:</string>
    <string name="button_file_download_information">Download information</string>
    <string name="button_file_download">Download file</string>
    <string name="error_file_download_address_input_invalid">Entered download address is invalid</string>
    <string name="notification_file_download_title">File Download</string>
    <string name="notification_file_download_text_in_progress">Download in progress</string>
    <string name="notification_file_download_text_completed">Download completed</string>
    <string name="message_cannot_download_without_permission">Cannot download file without permission</string>
    <string name="message_error_while_downloading_file">Error while downloading file</string>
    <string name="notification_channel_name_download">Download</string>
    <!--activity_file_download-->

</resources>