<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/changePaintColorMenuButton"
        android:icon="@drawable/ic_baseline_brush_24"
        android:title="@string/menu_item_change_paint_color"
        app:showAsAction="always" />

    <item
        android:id="@+id/clearScreenMenuButton"
        android:icon="@drawable/ic_baseline_delete_24"
        android:title="@string/menu_item_clear_screen"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/changePaintWidthMenuButton"
        android:icon="@drawable/ic_baseline_edit_24"
        android:title="@string/menu_item_change_paint_width"
        app:showAsAction="never" />

    <item
        android:id="@+id/changeBackgroundColorMenuButton"
        android:icon="@drawable/ic_baseline_color_lens_24"
        android:title="@string/menu_item_change_background_color"
        app:showAsAction="never" />
</menu>