<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fileDownloadLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/fileDownloadAddressLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:labelFor="@id/fileDownloadAddressInput"
        android:text="@string/label_file_download_address"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintBottom_toTopOf="@+id/fileDownloadInformationButton"
        app:layout_constraintEnd_toStartOf="@+id/fileDownloadAddressInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/fileDownloadAddressInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="41dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textUri"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toTopOf="@+id/fileDownloadInformationButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/fileDownloadAddressLabel"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/fileDownloadInformationButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:background="@android:color/darker_gray"
        android:text="@string/button_file_download_information"
        android:textColor="@color/black"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/fileDownloadSizeValueLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fileDownloadAddressInput" />

    <TextView
        android:id="@+id/fileDownloadSizeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_file_download_size"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintBottom_toTopOf="@+id/fileDownloadTypeLabel"
        app:layout_constraintEnd_toStartOf="@+id/fileDownloadSizeValueLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fileDownloadInformationButton" />

    <TextView
        android:id="@+id/fileDownloadSizeValueLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="186dp"
        android:text="@string/label_no_data"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintBottom_toTopOf="@+id/fileDownloadTypeValueLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/fileDownloadSizeLabel"
        app:layout_constraintTop_toBottomOf="@+id/fileDownloadInformationButton" />

    <TextView
        android:id="@+id/fileDownloadTypeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_file_download_type"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintBottom_toTopOf="@+id/fileDownloadButton"
        app:layout_constraintEnd_toStartOf="@+id/fileDownloadTypeValueLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fileDownloadSizeLabel" />

    <TextView
        android:id="@+id/fileDownloadTypeValueLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="184dp"
        android:text="@string/label_no_data"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintBottom_toTopOf="@+id/fileDownloadButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/fileDownloadTypeLabel"
        app:layout_constraintTop_toBottomOf="@+id/fileDownloadSizeValueLabel" />

    <Button
        android:id="@+id/fileDownloadButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:background="@android:color/darker_gray"
        android:text="@string/button_file_download"
        android:textColor="@color/black"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/fileDownloadProgressValueLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fileDownloadTypeValueLabel" />

    <TextView
        android:id="@+id/fileDownloadProgressLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_file_download_progress"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintBottom_toTopOf="@+id/fileDownloadProgressBar"
        app:layout_constraintEnd_toStartOf="@+id/fileDownloadProgressValueLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fileDownloadButton" />

    <TextView
        android:id="@+id/fileDownloadProgressValueLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="184dp"
        android:text="@string/label_no_data"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintBottom_toTopOf="@+id/fileDownloadProgressBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/fileDownloadProgressLabel"
        app:layout_constraintTop_toBottomOf="@+id/fileDownloadButton" />

    <ProgressBar
        android:id="@+id/fileDownloadProgressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fileDownloadProgressValueLabel" />

</androidx.constraintlayout.widget.ConstraintLayout>