<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/gradesFormLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".grades_average_app.activities.GradesFormActivity">

    <TextView
        android:id="@+id/gradesNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="2dp"
        android:labelFor="@id/gradesNameInput"
        android:text="@string/label_grades_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintBottom_toTopOf="@+id/gradesSurnameLabel"
        app:layout_constraintEnd_toStartOf="@+id/gradesNameInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/gradesNameInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="40dp"
        android:autofillHints="name"
        android:ems="10"
        android:inputType="textPersonName|textCapWords"
        android:maxLength="40"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toTopOf="@+id/gradesSurnameInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/gradesNameLabel"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/gradesSurnameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:labelFor="@id/gradesSurnameInput"
        android:text="@string/label_grades_surname"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintBottom_toTopOf="@+id/gradesAmountLabel"
        app:layout_constraintEnd_toStartOf="@+id/gradesSurnameInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gradesNameLabel" />

    <EditText
        android:id="@+id/gradesSurnameInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="40dp"
        android:autofillHints="name"
        android:ems="10"
        android:inputType="textPersonName|textCapWords"
        android:maxLength="40"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toTopOf="@+id/gradesAmountInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/gradesSurnameLabel"
        app:layout_constraintTop_toBottomOf="@+id/gradesNameInput" />

    <TextView
        android:id="@+id/gradesAmountLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:labelFor="@id/gradesAmountInput"
        android:text="@string/label_grades_amount"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintBottom_toTopOf="@+id/meanResult"
        app:layout_constraintEnd_toStartOf="@+id/gradesAmountInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gradesSurnameLabel" />

    <EditText
        android:id="@+id/gradesAmountInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="2"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toTopOf="@+id/meanResult"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/gradesAmountLabel"
        app:layout_constraintTop_toBottomOf="@+id/gradesSurnameInput" />

    <TextView
        android:id="@+id/meanResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/gradesProceedButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gradesAmountLabel" />

    <Button
        android:id="@+id/gradesProceedButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="154dp"
        android:layout_marginEnd="169dp"
        android:layout_marginBottom="370dp"
        android:backgroundTint="@android:color/darker_gray"
        android:text="@string/button_grades_proceed"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/meanResult" />

</androidx.constraintlayout.widget.ConstraintLayout>